# rag-backend

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml
docker/: Dockerfile.dev
envs/: .env.example
src/: app.py  pyproject.toml  setup.cfg
src/backend/: config.py
src/backend/datastore/: chat_payload.py  qdrant_doc.py  save_payload.py
src/backend/interfaces/: ai.py  embedding.py  loader.py  splitter.py  vector_db.py
src/backend/loaders/: excel.py  pdf.py  txt.py
src/backend/services/: azure_ai.py  azure_embeddings.py  docs_loader.py  prompt.py  qdrant.py  rag.py
src/backend/services/splitters/: default_spliiter.py  semantic_spliiter.py
src/backend/utils/: helpers.py  logger.py  prompts.py
src/tests/: test_rag.py
